Fixes problem when a producer has more 2 movies. (#7)